syntax = "proto3";

package user;

option go_package = "./proto/user;user";

service User {
	rpc Call(CallRequest) returns (CallResponse) {}
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
	rpc ResetUserPassword(ResetUserUserRequest) returns (ResetUserResponse) {}
	rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
	rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
	rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
	rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}

	rpc UpdateUserSelfInfo(UpdateUserSelfInfoRequest) returns (UpdateUserSelfInfoResponse) {}
	rpc UpdateUserSelfPassword(UpdateUserSelfPasswordRequest) returns (UpdateUserSelfPasswordResponse) {}
	rpc GetUserSelfInfo(GetUserSelfInfoRequest) returns (GetUserSelfInfoResponse) {}
}

message GetUserSelfInfoRequest {
	string UserName = 1;
}

message GetUserSelfInfoResponse {
	int64 ID = 1;
	string UserName = 2;
	string Password = 3;
	string Email = 4;
	string Phone = 5;
	string Role = 6;
}

message UpdateUserSelfPasswordRequest {
	int64 UserId = 1;
	string UserName = 2;
	string Password = 3;
	string NewPassword = 4;
}
message UpdateUserSelfPasswordResponse {
}


message UpdateUserSelfInfoRequest {
	int64 UserId = 1;
	string Phone = 2;
	string Email = 3;
}
message UpdateUserSelfInfoResponse {
}
message UpdateUserRequest {
	int64 UserId = 1;
	string Phone = 2;
	string Email = 3;
	string Role = 4;
}

message UpdateUserResponse {
}


message DeleteUserRequest {
	int64 ID = 1;
}

message DeleteUserResponse {
}

message GetUserRequest {
	int64 ID = 1;
}

message GetUserResponse {
	int64 ID = 1;
	string UserName = 2;
	string Password = 3;
	string Email = 4;
	string Phone = 5;
	string Role = 6;
}

message GetUsersRequest {
	int64 PageNum = 1;
	int64 PageSize = 2;
	string UserName = 3;
	string Role = 4;
}

message GetUsersResponse {
	int64 PageNum = 1;
	int64 PageSize = 2;
	int64 Count = 3;
	repeated GetUserResponse UsersInfo =4;
}

message ResetUserUserRequest {
	int64 UserId = 1;
	string NewPassword = 2;
}

message ResetUserResponse {

}

message CallRequest {
	string name = 1;
}

message CallResponse {
	string msg = 1;
}

message CreateUserRequest {
	string	UserName = 1;
	string	Password = 2;
	string	Email =3;
	string	Phone = 4;
	string	Role = 5;
}

message CreateUserResponse {
	int64 UserId = 1;
}


